# Orbit-AI-Reversal

./: .env.local.example  .gitignore  .vercelignore  API_SPEC.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  TASKS.md  UI_FLOW.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  render.yaml  requirements.txt  vercel.json
api/: index.py
app/: error.tsx  globals.css  layout.tsx  loading.tsx  manifest.ts  not-found.tsx  page.tsx  providers.tsx  robots.ts  sitemap.ts
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  worker.py
backend/app/api/: dependencies.py
backend/app/api/v1/: analyses.py  auth.py  oauth.py  reports.py
backend/app/core/: config.py  database.py  observability.py  security.py
backend/app/models/: __init__.py  analysis.py  base.py  identity.py  report.py
backend/app/schemas/: __init__.py  analysis.py  auth.py  report.py
backend/app/services/: ai.py  analyzer.py  architecture.py  auth.py  compare.py  deep_analysis.py  events.py  explorer.py  export.py  har_import.py  oauth.py  page_signals.py  queue.py  site_probes.py  tech_detect.py  url_policy.py
backend/migrations/: env.py
backend/migrations/versions/: 04fcd0700df6_initial_schema.py
backend/tests/: test_analyzer.py  test_auth.py  test_compare.py  test_database_url.py  test_deep_analysis.py  test_explorer_artifacts.py  test_features.py  test_har_import.py  test_oauth.py  test_queue.py  test_site_probes.py  test_url_policy.py
components/: AppSidebar.tsx  OrbitLogo.tsx  (+3 more)
(+23 files in other folders)
