[project]
name = "orbit-api"
version = "0.1.0"
description = "Orbit Software Intelligence API and exploration worker"
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.20.0",
  "alembic>=1.14.0",
  "fastapi>=0.115.8",
  "httpx>=0.28.1",
  "playwright>=1.50.0",
  "pydantic-settings>=2.7.1",
  "redis>=5.2.1",
  "sqlalchemy>=2.0.38",
  "uvicorn[standard]>=0.34.0"
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = ["pytest>=8.3.4", "pytest-asyncio>=0.25.3", "ruff>=0.9.6"]
observability = ["sentry-sdk[fastapi]>=2.20.0"]
postgres = ["asyncpg>=0.30.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Alembic autogenerates version scripts; don't lint generated migration bodies.
extend-exclude = ["migrations/versions"]
